Banner block has been added

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -42,6 +42,24 @@
   </header>
 
   <main>
+    <h1 class="visually-hidden">MOVEE - компания для помощи в перездах</h1>
+    <section class="banner">
+      <h2 class="banner__title">Квартирные переезды</h2>
+      <p class="banner_subtitle">По Москве и области</p>
+      <a class="banner__order-button action-button" href="#phone">Заказать</a>
+      <ul class="banner__features-list list-reset">
+        <li class="banner__feature banner__feature--track">
+          Более 800 <br> переездов
+        </li>
+        <li class="banner__feature banner__feature--package">
+          Бережная <br> упаковка
+        </li>
+        <li class="banner__feature banner__feature--money">
+          Фиксированная <br> цена
+        </li>
+      </ul>
+      <a class="banner__phone-button" href="#phone">Заказать звонок</a>
+    </section>
   </main>
 
   <footer>
