Description block has been added

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -60,6 +60,50 @@
       </ul>
       <a class="banner__phone-button" href="#phone">Заказать звонок</a>
     </section>
+    <section class="description">
+      <h2 class="description__title">Как это происходит?</h2>
+      <ul class="description__points-list list-reset">
+        <li class="description__point">
+          <p class="description__point-number">01</p>
+          <p class="description__point-title">
+            Оценка объема предстоящих работ
+          </p>
+          <p class="description__point-text">
+            Стоимость переезда зависит от количества комнат, вещей и мебели.
+          </p>
+        </li>
+        <li class="description__point">
+          <p class="description__point-number">02</p>
+          <p class="description__point-title">
+            Упаковка вещей
+          </p>
+          <p class="description__point-text">
+            Упаковываем вещи в коробки, подписываем.
+            Габаритное и деликатное,  упаковываем отдельно.
+          </p>
+        </li>
+        <li class="description__point">
+          <p class="description__point-number">03</p>
+          <p class="description__point-title">
+            Погрузка и транспортировка вещей
+          </p>
+          <p class="description__point-text">
+            В нашем автопарке имеются машины,
+              подходящие для мебели любых габаритов.
+          </p>
+        </li>
+        <li class="description__point">
+          <p class="description__point-number">04</p>
+          <p class="description__point-title">
+            Распаковка и расстановка мебели
+          </p>
+          <p class="description__point-text">
+            Опытные грузчики быстро расставят мебель
+              и уберут мусор от распаковки.
+          </p>
+        </li>
+      </ul>
+    </section>
   </main>
 
   <footer>
