Cost block has been added

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -46,7 +46,7 @@
     <section class="banner">
       <h2 class="banner__title">Квартирные переезды</h2>
       <p class="banner_subtitle">По Москве и области</p>
-      <a class="banner__order-button action-button" href="#phone">Заказать</a>
+      <a class="banner__order-button action-button" href="#order">Заказать</a>
       <ul class="banner__features-list list-reset">
         <li class="banner__feature banner__feature--track">
           Более 800 <br> переездов
@@ -58,7 +58,7 @@
           Фиксированная <br> цена
         </li>
       </ul>
-      <a class="banner__phone-button" href="#phone">Заказать звонок</a>
+      <a class="banner__phone-button" href="#order">Заказать звонок</a>
     </section>
     <section class="description">
       <h2 class="description__title">Как это происходит?</h2>
@@ -103,6 +103,67 @@
           </p>
         </li>
       </ul>
+    </section>
+    <section class="cost">
+      <h2 class="cost__title">Цены</h2>
+      <p class="cost__subtitle">Фиксированная стоимость на переезд под ключ</p>
+      <ul class="cost__offers-list list-reset">
+        <li class="cost__offer-wrapper cost__offer-wrapper--no-js">
+          <artile class="cost__offer">
+            <h3 class="cost__offer-title">1-комнатная кв-ра</h3>
+            <ul class="cost__offer-features-list list-reset">
+              <li class="cost__offer-feature">1 фургон</li>
+              <li class="cost__offer-feature">2 грузчика</li>
+              <li class="cost__offer-feature">Переезд за 4 часа</li>
+            </ul>
+            <p class="cost__offer-price">8 490₽</p>
+            <a class="cost__offer-order-button order-button" href="#order">
+              Заказать
+            </a>
+          </artile>
+        </li>
+        <li
+          class="
+            cost__offer-wrapper
+            cost__offer-wrapper--no-js
+            cost__offer-wrapper--active
+          "
+        >
+          <artile class="cost__offer">
+            <h3 class="cost__offer-title">2-комнатная кв-ра</h3>
+            <ul class="cost__offer-features-list list-reset">
+              <li class="cost__offer-feature">1 газель - 3 метра</li>
+              <li class="cost__offer-feature">2 грузчика</li>
+              <li class="cost__offer-feature">Переезд за 4 часа</li>
+            </ul>
+            <p class="cost__offer-price">10 990₽</p>
+            <a class="cost__offer-order-button order-button" href="#order">
+              Заказать
+            </a>
+          </artile>
+        </li>
+        <li class="cost__offer-wrapper cost__offer-wrapper--no-js">
+          <artile class="cost__offer">
+            <h3 class="cost__offer-title">3-комнатная кв-ра</h3>
+            <ul class="cost__offer-features-list list-reset">
+              <li class="cost__offer-feature">1 газель - 4 метра</li>
+              <li class="cost__offer-feature">2 грузчика</li>
+              <li class="cost__offer-feature">Переезд за 6 часа</li>
+            </ul>
+            <p class="cost__offer-price">16 490₽</p>
+            <a class="cost__offer-order-button order-button" href="#order">
+              Заказать
+            </a>
+          </artile>
+        </li>
+      </ul>
+      <button
+        class="cost__open-costs-button cost__open-costs-button--no-js"
+        type="button"
+        id="open-costs-buttons-js"
+      >
+        Все цены
+      </button>
     </section>
   </main>
 
