--- a/source/html/index.html
+++ b/source/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
 <body>
   <header class="header">
     <img
-      class="header__logo"
+      class="header__logo header__logo--no-js"
       src="img/logo.svg"
       width="62"
       height="20"
@@ -109,7 +109,7 @@
       <p class="cost__subtitle">Фиксированная стоимость на переезд под ключ</p>
       <ul class="cost__offers-list list-reset">
         <li class="cost__offer-wrapper cost__offer-wrapper--no-js">
-          <artile class="cost__offer">
+          <article class="cost__offer">
             <h3 class="cost__offer-title">1-комнатная кв-ра</h3>
             <ul class="cost__offer-features-list list-reset">
               <li class="cost__offer-feature">1 фургон</li>
@@ -120,7 +120,7 @@
             <a class="cost__offer-order-button order-button" href="#order">
               Заказать
             </a>
-          </artile>
+          </article>
         </li>
         <li
           class="
@@ -129,7 +129,7 @@
             cost__offer-wrapper--active
           "
         >
-          <artile class="cost__offer">
+          <article class="cost__offer">
             <h3 class="cost__offer-title">2-комнатная кв-ра</h3>
             <ul class="cost__offer-features-list list-reset">
               <li class="cost__offer-feature">1 газель - 3 метра</li>
@@ -140,10 +140,10 @@
             <a class="cost__offer-order-button order-button" href="#order">
               Заказать
             </a>
-          </artile>
+          </article>
         </li>
         <li class="cost__offer-wrapper cost__offer-wrapper--no-js">
-          <artile class="cost__offer">
+          <article class="cost__offer">
             <h3 class="cost__offer-title">3-комнатная кв-ра</h3>
             <ul class="cost__offer-features-list list-reset">
               <li class="cost__offer-feature">1 газель - 4 метра</li>
@@ -154,7 +154,7 @@
             <a class="cost__offer-order-button order-button" href="#order">
               Заказать
             </a>
-          </artile>
+          </article>
         </li>
       </ul>
       <button
@@ -164,6 +164,341 @@
       >
         Все цены
       </button>
+    </section>
+    <section class="autopark">
+      <h2 class="autopark__title">Автопарк</h2>
+      <p class="autopark__subtitle">10 видов автомобилей от 800 кг до 10 тонн</p>
+      <ul class="autopark__types-list autopark__types-list--no-js list-reset">
+        <li class="autopark__type">
+          <button
+            class="autopark__type-button autopark__type-button--active"
+            type="button"
+            data-type="wagon"
+            disabled
+          >
+            Газели
+          </button>
+        </li>
+        <li class="autopark__type">
+          <button
+            class="autopark__type-button"
+            type="button"
+            data-type="car"
+          >
+            Каблуки
+          </button>
+        </li>
+        <li class="autopark__type">
+          <button
+            class="autopark__type-button"
+            type="button"
+            data-type="truck"
+          >
+            Грузовики
+          </button>
+        </li>
+      </ul>
+      <ul class="autopark__sliders-list list-reset">
+        <li
+          class="
+            autopark__slider-wrapper
+            autopark__slider-wrapper--active
+            autopark__slider-wrapper--no-js
+          "
+          data-type="wagon"
+        >
+          <button
+            class="autopark__slider-switch-button autopark__slider-switch-button--previous"
+            type="button"
+            aria-label="Предыдущий слайд"
+          >
+          </button>
+          <ul class="autopark__slider autopark__slider--no-js list-reset">
+            <li
+              class="autopark__slide autopark__slide--no-js autopark__slide--active"
+              data-slide="wagon-1"
+            >
+              <article class="autopark__offer">
+                <h3 class="autopark__offer-title">Газель 3 метра</h3>
+                <picture class="autopark__offer-img-wrapper">
+                  <img
+                    src="img/wagon.png"
+                    width="641"
+                    height="453"
+                    alt="Наша фирменная газель"
+                  >
+                </picture>
+                <ul class="autopark__offer-features-list list-reset">
+                  <li class="autopark__offer-feature">Ширина 2 м</li>
+                  <li class="autopark__offer-feature">Высота 2 м</li>
+                  <li class="autopark__offer-feature">Объем 16 м³</li>
+                  <li class="autopark__offer-feature">Грузоподъемность 1,5 т</li>
+                </ul>
+                <p class="autopark__offer-description">
+                  Газель 3 метра / 1,5 тонны
+                </p>
+                <a
+                  class="
+                    autopark__offer-order-button
+                    autopark__offer-order-button--no-js
+                    order-button
+                    "
+                  href="#order"
+                >
+                  Заказать
+                </a>
+              </article>
+            </li>
+            <li
+              class="autopark__slide autopark__slide--no-js"
+              data-slide="wagon-2"
+            >
+              <article class="autopark__offer">
+                <h3 class="autopark__offer-title">Газель 3,5 метра</h3>
+                <picture
+                  class="
+                    autopark__offer-img-wrapper
+                    autopark__offer-img-wrapper--reverse
+                  "
+                >
+                  <img
+                    src="img/wagon.png"
+                    width="641"
+                    height="453"
+                    alt="Наша фирменная газель"
+                  >
+                </picture>
+                <ul class="autopark__offer-features-list list-reset">
+                  <li class="autopark__offer-feature">Ширина 2 м</li>
+                  <li class="autopark__offer-feature">Высота 2,5 м</li>
+                  <li class="autopark__offer-feature">Объем 18 м³</li>
+                  <li class="autopark__offer-feature">Грузоподъемность 2 т</li>
+                </ul>
+                <p class="autopark__offer-description">
+                  Газель 3,5 метра / 2 тонны
+                </p>
+                <a
+                  class="
+                    autopark__offer-order-button
+                    autopark__offer-order-button--no-js
+                    order-button
+                    "
+                  href="#order"
+                >
+                  Заказать
+                </a>
+              </article>
+            </li>
+          </ul>
+          <button
+            class="autopark__slider-switch-button autopark__slider-switch-button--next"
+            type="button"
+            aria-label="Следующий слайд"
+          >
+          </button>
+          <ul
+            class="
+              autopark__slider-controls
+              autopark__slider-controls--no-js
+              list-reset
+            "
+          >
+            <li class="autopark__slide-button-wrapper">
+              <button
+                class="autopark__slide-button autopark__slide-button--active"
+                type="button"
+                aria-label="Переключить на 1 слайд"
+                data-slide="wagon-1"
+                disabled
+              >
+              </button>
+            </li>
+            <li class="autopark__slide-button-wrapper">
+              <button
+                class="autopark__slide-button"
+                type="button"
+                aria-label="Переключить на 2 слайд"
+                data-slide="wagon-2"
+              >
+              </button>
+            </li>
+          </ul>
+          <a
+            class="
+              autopark__slider-order-button
+              autopark__slider-order-button--no-js
+              order-button
+              "
+            href="#order"
+          >
+            Заказать
+          </a>
+        </li>
+        <li
+          class="autopark__slider-wrapper autopark__slider-wrapper--no-js"
+          data-type="car"
+        >
+          <button
+            class="autopark__slider-switch-button autopark__slider-switch-button--previous"
+            type="button"
+            aria-label="Предыдущий слайд"
+          >
+          </button>
+          <ul class="autopark__slider autopark__slider--no-js list-reset">
+            <li
+              class="autopark__slide autopark__slide--no-js autopark__slide--active"
+              data-slide="car-1"
+            >
+              <article class="autopark__offer">
+                <h3 class="autopark__offer-title">Каблук 2 метра</h3>
+                <picture class="autopark__offer-img-wrapper">
+                  <img
+                    src="img/car.png"
+                    width="641"
+                    height="453"
+                    alt="Наш фирменный каблук"
+                  >
+                </picture>
+                <ul class="autopark__offer-features-list list-reset">
+                  <li class="autopark__offer-feature">Ширина 1,5 м</li>
+                  <li class="autopark__offer-feature">Высота 1,5 м</li>
+                  <li class="autopark__offer-feature">Объем 10 м³</li>
+                  <li class="autopark__offer-feature">Грузоподъемность 1 т</li>
+                </ul>
+                <p class="autopark__offer-description">
+                  Каблук 2 метра / 1 тонны
+                </p>
+                <a
+                  class="
+                    autopark__offer-order-button
+                    autopark__offer-order-button--no-js
+                    order-button
+                    "
+                  href="#order"
+                >
+                  Заказать
+                </a>
+              </article>
+            </li>
+          </ul>
+          <button
+            class="autopark__slider-switch-button autopark__slider-switch-button--next"
+            type="button"
+            aria-label="Следующий слайд"
+          >
+          </button>
+          <ul
+            class="
+              autopark__slider-controls
+              autopark__slider-controls--no-js
+              list-reset
+            "
+          >
+            <li class="autopark__slide-button-wrapper">
+              <button
+                class="autopark__slide-button autopark__slide-button--active"
+                type="button"
+                aria-label="Переключить на 1 слайд"
+                data-slide="car-1"
+                disabled
+              >
+              </button>
+            </li>
+          </ul>
+          <a
+            class="
+              autopark__slider-order-button
+              autopark__slider-order-button--no-js
+              order-button
+              "
+            href="#order"
+          >
+            Заказать
+          </a>
+        </li>
+        <li
+          class="autopark__slider-wrapper autopark__slider-wrapper--no-js"
+          data-type="truck"
+        >
+          <button
+            class="autopark__slider-switch-button autopark__slider-switch-button--previous"
+            type="button"
+            aria-label="Предыдущий слайд"
+          >
+          </button>
+          <ul class="autopark__slider autopark__slider--no-js list-reset">
+            <li
+              class="autopark__slide autopark__slide--no-js autopark__slide--active"
+              data-slide="truck-1"
+            >
+              <article class="autopark__offer">
+                <h3 class="autopark__offer-title">Грузовик 4 метра</h3>
+                <picture class="autopark__offer-img-wrapper">
+                  <img
+                    src="img/truck.png"
+                    width="641"
+                    height="453"
+                    alt="Наш фирменный грузовик"
+                  >
+                </picture>
+                <ul class="autopark__offer-features-list list-reset">
+                  <li class="autopark__offer-feature">Ширина 2,5 м</li>
+                  <li class="autopark__offer-feature">Высота 2,5 м</li>
+                  <li class="autopark__offer-feature">Объем 20 м³</li>
+                  <li class="autopark__offer-feature">Грузоподъемность 3 т</li>
+                </ul>
+                <p class="autopark__offer-description">
+                  Грузовик 4 метра / 3 тонны
+                </p>
+                <a
+                  class="
+                    autopark__offer-order-button
+                    autopark__offer-order-button--no-js
+                    order-button
+                    "
+                  href="#order"
+                >
+                  Заказать
+                </a>
+              </article>
+            </li>
+          </ul>
+          <button
+            class="autopark__slider-switch-button autopark__slider-switch-button--next"
+            type="button"
+            aria-label="Следующий слайд"
+          >
+          </button>
+          <ul
+            class="
+              autopark__slider-controls
+              autopark__slider-controls--no-js
+              list-reset
+            "
+          >
+            <li class="autopark__slide-button-wrapper">
+              <button
+                class="autopark__slide-button autopark__slide-button--active"
+                type="button"
+                aria-label="Переключить на 1 слайд"
+                data-slide="truck-1"
+                disabled
+              >
+              </button>
+            </li>
+          </ul>
+          <a
+            class="
+              autopark__slider-order-button
+              autopark__slider-order-button--no-js
+              order-button
+              "
+            href="#order"
+          >
+            Заказать
+          </a>
+        </li>
+      </ul>
     </section>
   </main>
 
