--- a/source/html/index.html
+++ b/source/html/index.html
@@ -46,7 +46,9 @@
     <section class="banner">
       <h2 class="banner__title">Квартирные переезды</h2>
       <p class="banner_subtitle">По Москве и области</p>
-      <a class="banner__order-button action-button" href="#order">Заказать</a>
+      <a class="banner__order-button action-button" href="#order">
+        <span>Заказать</span>
+      </a>
       <ul class="banner__features-list list-reset">
         <li class="banner__feature banner__feature--track">
           Более 800 <br> переездов
